src/layouts/MainHeader/MainHeader.css
/* Big cover image on the home page */
.main-header {
    position: relative;
    display: table;
    width: 100%;
    height: 100vh;
    margin-bottom: 5rem;
    text-align: center;
    background: #222 no-repeat center center;
    background-size: cover;
    overflow: hidden;
}

.center {
  margin: auto;
}

.multi-col {
  flex: 1;
}

.main-header .inner {
    max-width: 80%;
}

/* the height to width aspect ratio for the iphone6 image is 1634:797 */
.stacked-img {
    height: 600px;
    width: 293px;
}

.top-stacked-img {
    height: 465px;
    width: 262px;
}

.parent {
    position: relative;
    top: 0;
    left: 0;
    height: 600px;
    width: 293px;
    padding-bottom: 5%;
}

.youtube1 {
  position: relative;
  top: 65px;
  left: 17px;
  z-index: 1;
}

.gifImage {
  position: relative;
  top: 65px;
  left: 0px;
  z-index: 1;
}

.image2 {
  position: absolute;
  top: 0px;
  left: 0px;
  z-index: 0;
}

@media screen and (min-width: 850px) {
    .row {
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        max-width: 100%;
        padding-bottom: 2%;
        font-size: 1.4em;
        line-height: 2em;
    }

    .col {
        margin-top: auto;
        margin-bottom: auto;
    }

    .left {
        flex: 55%;
    }

    .right {
        flex: 35%;
    }
}

@media screen and (max-width: 850px) {
    .col {
        padding-bottom: 10%;
    }

    .step-header {
      font-size: 1.5em;
      padding-top: 8%;
    }


    .stacked-img {
        margin: auto;
        height: 450px;
        width: 220px;
    }

    .top-stacked-img {
        height: 349px;
        width: 197px;
    }

    .parent {
      width: 220px;
      position: relative;
      top: 0;
      left: 0;
      height: 451px;
      width: 220px;
      margin-bottom: 10%;
      padding-bottom: 5%;
    }

    .youtube1 {
      position: relative;
      top: 65px;
      left: 17px;
      z-index: 1;
    }

    .gifImage {
      position: relative;
      top: 65px;
      left: 0px;
      z-index: 1;
    }

    .image2 {
      width: 220px;
      position: absolute;
      top: 0px;
      left: 0;
      right: 0;
      margin: auto;
      z-index: 0;
    }
}
    
/* Put a semi-opaque radial gradient behind the icon to make it more visible
   on photos which happen to have a light background. */
.home-template .main-header::after {
    display: block;
    content: " ";
    width: 150px;
    height: 130px;
    border-radius: 100%;
    position: absolute;
    bottom: 0;
    left: 50%;
    margin-left: -75px;
    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0) 100%);
}

/* Hide when there's no cover image or on page2+ */
.no-cover.main-header::after,
.paged .main-header::after {
    display: none;
}

.no-cover.main-header {
    min-height: 160px;
    max-height: 40vh;
    background: #f5f8fa;
}

.post-head.main-header {
    height: 65vh;
    min-height: 180px;
}

.no-cover.post-head.main-header {
    height: 85px;
    min-height: 0;
    margin-bottom: 0;
    background: transparent;
}

.tag-head.main-header {
    height: 40vh;
    min-height: 180px;
}

.author-head.main-header {
    height: 40vh;
    min-height: 180px;
}

.no-cover.author-head.main-header {
    height: 10vh;
    min-height: 100px;
    background: transparent;
}

/* On page2+ make all the headers smaller */
.paged .main-header {
    max-height: 30vh;
}

/* Create a bouncing scroll-down arrow on homepage with cover image */
.scroll-down {
    display: block;
    position: absolute;
    z-index: 100;
    bottom: 45px;
    left: 50%;
    margin-left: -16px;
    width: 34px;
    height: 34px;
    font-size: 34px;
    text-align: center;
    text-decoration: none;
    color: rgba(255, 255, 255, 0.7);
    -webkit-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    transform: rotate(-90deg);
    -webkit-animation: bounce 4s 2s infinite;
    animation: bounce 4s 2s infinite;
}

/* Stop it bouncing and increase contrast when hovered */
.scroll-down:hover {
    color: #fff;
    -webkit-animation: none;
    animation: none;
}

/* Hide when there's no cover image or on page2+ */
.no-cover .scroll-down,
.paged .scroll-down {
    display: none;
}

.icon-arrow-left::before {
    content: "\f605";
}

/* ==========================================================================
       Media Queries - Smaller than 900px
   ========================================================================== */

@media only screen and (max-width: 900px) {
    .main-header {
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;

        /* height: auto; Node: duplicate height values included in original Casper css */
        min-height: 240px;
        height: 60vh;
        padding: 15% 0;
        padding-bottom: 0;
    }

    .home-template .main-header::after { display: none; }

    .paged .main-header {
        min-height: 180px;
        padding: 10% 0;
    }

    .post-head.main-header {
        height: 45vh;
    }

    .tag-head.main-header,
    .author-head.main-header {
        height: 30vh;
    }

    .no-cover.post-head.main-header {
        height: 55px;
        padding: 0;
    }

    .no-cover.author-head.main-header {
        padding: 0;
    }

    .scroll-down { display: none; }
}

/* ==========================================================================
       Media Queries - Smaller than 500px
   ========================================================================== */

@media only screen and (max-width: 500px) {
    .main-header {
        margin-bottom: 15px;
        height: 40vh;
    }

    .no-cover.main-header {
        height: 30vh;
    }

    .paged .main-header {
        max-height: 20vh;
        min-height: 160px;
        padding: 10% 0;
    }

    .post-head.main-header {
        height: 30vh;
    }

    .tag-head.main-header,
    .author-head.main-header {
        height: 20vh;
    }
}

/* ==========================================================================
       Animations
   ========================================================================== */

/* Used to bounce .scroll-down on home page */
@-webkit-keyframes bounce {
    0%,
    10%,
    25%,
    40%,
    50% {
        -webkit-transform: translateY(0) rotate(-90deg);
        transform: translateY(0) rotate(-90deg);
    }

    20% {
        -webkit-transform: translateY(-10px) rotate(-90deg);
        transform: translateY(-10px) rotate(-90deg);
    }

    30% {
        -webkit-transform: translateY(-5px) rotate(-90deg);
        transform: translateY(-5px) rotate(-90deg);
    }
}

@keyframes bounce {
    0%,
    10%,
    25%,
    40%,
    50% {
        -webkit-transform: translateY(0) rotate(-90deg);
        transform: translateY(0) rotate(-90deg);
    }

    20% {
        -webkit-transform: translateY(-10px) rotate(-90deg);
        transform: translateY(-10px) rotate(-90deg);
    }

    30% {
        -webkit-transform: translateY(-5px) rotate(-90deg);
        transform: translateY(-5px) rotate(-90deg);
    }
}

